--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #D9D9D9;
+    background-color: #D5A3F4;
 }
 
 span {
@@ -25,6 +25,17 @@ input {
 
 button {
     padding: 5px;
+    color: white;
+    background-color: #D5A3F4;
+    font-size: 0.9em;
+    border: 0px;
+    border-radius: 10px;
+}
+
+button:hover {
+    color: #d5a3f4;
+    background-color: white;
+    border: 2px solid #D5A3F4;
 }
 
 
